2003-05-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/msg_client.c(_munge_msg_client_connect):
	  Changed client's connect() retry backoff from exponential to linear.

	* src/munged/munged.c(segv_handler): Added.

2003-05-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 10 to 64.

	* src/libcommon/log.c, src/libcommon/log.h:
	  Added log_errno().  All callers changed.

2003-05-07  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c(dec_v1_validate_time):
	  Added a minimum negative clock skew of 1 second, since we were
	  encountering EMUNGE_CRED_REWOUND in spite of NTP's best efforts.

2003-05-06  Chris Dunlap  <cdunlap@llnl.gov>

	* : Added support for the "--enable-debug" configure script option.

	* src/etc/munge.init, src/libcommon/munge_defs.h, src/munged/conf.c,
	  src/munged/munged.c: Added munged F cmdline opt and daemon support.

	* src/munged/random.c(random_init): Added "seeding in progress" msg.

2003-05-03  Chris Dunlap  <cdunlap@llnl.gov>

	* HISTORY: Added.

	* src/munged/msg_server.c(err_v1_process_msg):
	  Fixed sending err msg with no body, but need to revisit this routine.

2003-05-02  Chris Dunlap  <cdunlap@llnl.gov>

	* : Removed dprintf() due to an interpositioning bug with a
	  GNU extension function named dprintf() -- who knew?!?

	* : Read PACKAGE/VERSION info from META file.

	* src/munge/munge.c, src/munge/unmunge.c, src/munged/conf.c:
	  Added V cmdline opt.

	* src/munge/unmunge.c(main): Fixed invalid read of free'd memory.

	* src/libmunge/decode.c(decode_rsp_v1):
	  Fixed dataless cred decode to match header (ie, no data is malloc'd).
	  Fixed overwrite of returned data buffer.

2003-04-30  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.1.

	* munge.spec: Tweaked description, pre/post/preun/postun, files.

	* : Added 'distclean-local' hook via Make-inc.mk.

	* : Added startup script.

2003-04-29  Chris Dunlap  <cdunlap@llnl.gov>
