@@ -1,5 +1,8 @@
 2003-05-22  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munge/munge.c, src/munge/unmunge.c:
+	  Changed manner in which strtol() is checked for error.
+
 	* src/libmunge/msg_client.c(_munge_msg_client_connect):
 	  Changed client's connect() retry backoff from exponential to linear.
 
